# passive-film-model

./: .gitignore  Makefile  Makefile.am  README.md  allocate.f90  calc_grad_pf.f90  calc_lap.f90  calc_lap_mu.f90  calc_lap_pf.f90  calculate_sulfidation_rates.f90  configure.ac  couple_kmc_pf.f90  diffusivities.f90  dissolve_film.f90  distrib_kmc.f90  distrib_params.f90  distrib_pf.f90  draw_progress_bar.f90  electro_feval.f90  electro_jacob.f90  elpotsolve.f90  estimate_timestep.f90  feval_env_met.f90  feval_env_pht.f90  feval_env_pyr.f90  feval_met_env.f90  feval_met_pht.f90  feval_met_pyr.f90  feval_pht_env.f90  feval_pht_met.f90  feval_pht_pyr.f90  feval_pyr_env.f90  feval_pyr_met.f90  feval_pyr_pht.f90  gather_electro.f90  gather_kmc.f90  gather_mu.f90  gather_opyr.f90  gather_pf.f90  iccg.f90  (+54 more)
doc/: LICENSE  contributors.txt  ford_project_file
doc/manual/: manual.tex  references.bib
sample_parameters/: filmenv.spparksscript  ford_project_file  metfilm.spparksscript  param.in  vacmet.spparksscript.template
src/: distrib_params.f90  initialize_geometry.f90  kMC_h2form.f90  kMC_vacdebonding.f90  read_parameters.f90  shared_modules.f90  solve_ang.f90  solve_mu.f90  thermo.f90  wrapper.f90  write_parameters.f90
utils/: generate_free_energies.f90  phase-stabilities.ch  sulfidation-rate.ch
